--- a/src/app.html
+++ b/src/app.html
@@ -6,6 +6,25 @@
             name="viewport"
             content="width=300, initial-scale=1, minimum-scale=0.1"
         />
+        <link rel="manifest" href="/manifest.json" />
+        <meta
+            name="theme-color"
+            content="#ffffff"
+            media="(prefers-color-scheme: light)"
+        />
+        <meta
+            name="theme-color"
+            content="#000000"
+            media="(prefers-color-scheme: dark)"
+        />
+        <script>
+            const stored = localStorage.getItem("theme");
+            const prefersDark = matchMedia(
+                "(prefers-color-scheme: dark)",
+            ).matches;
+            if (stored === "dark" || (!stored && prefersDark))
+                document.documentElement.classList.add("dark");
+        </script>
         %sveltekit.head%
     </head>
     <body data-sveltekit-preload-data="hover">
